@@ -8,6 +8,7 @@ $Id$
 
 Version 1.4.0:
 
+* Slave config allow flag and completion object.
 * Mailbox handler
 * READMEs for examples.
 * Remove get_cycles() calls and references to cpu_khz to increase
